force-app/main/default/objects/Client__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>This field contains primary address of the client.</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>