force-app/main/default/objects/Client__c/fields/Agreement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_End_Date__c</fullName>
    <description>Will store the End Date of the Agreement</description>
    <label>Agreement End Date</label>
    <type>Date</type>
</CustomField>