force-app/main/default/objects/Client__c/fields/Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will Show The Agreement Is Signed Or Not</description>
    <label>Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>