force-app/main/default/objects/Client__c/fields/Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Start_Date__c</fullName>
    <description>Will Store The Start Date Of The Agreement</description>
    <label>Agreement Start Date</label>
    <type>Date</type>
</CustomField>