force-app/main/default/objects/Client__c/fields/Candidate_Fields__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Fields__c</fullName>
    <label>Candidate Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>