force-app/main/default/objects/Client__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>General or primary email address of the company (e.g., HR@company.com).</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>