force-app/main/default/objects/Client__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <description>Contact Person Details From The Client</description>
    <label>Contact Person</label>
    <length>18</length>
    <type>Text</type>
</CustomField>