force-app/main/default/objects/Client__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>The primary contact number for the client. May be used for follow-up or support.</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>