force-app/main/default/objects/Client__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A free-text field where recruiters can enter additional notes or background information about the client — such as their hiring preferences, company culture, or special instructions.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>