force-app/main/default/objects/Client__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Store&apos;s Primary Email Of Cient</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>