force-app/main/default/objects/Client__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the client is currently active (working with your agency) or inactive (not currently engaging or has paused hiring). Recommended values: Active / Inactive.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>