force-app/main/default/objects/Client__c/fields/NumberEmployee__c.field-meta.xml
<CustomField>
    <fullName>NumberEmployee__c</fullName>
    <description>Total number of employees currently working in the organization.</description>
    <label>Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>