force-app/main/default/objects/Client__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Stores The Primary Phone Details Of The Client</description>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>