force-app/main/default/objects/Client__c/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The internal team member (recruiter) assigned to manage the relationship with this client or handle job requisitions from this company. This is typically a lookup field to the User object.</description>
    <label>Recruiter</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipName>Client_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>