force-app/main/default/objects/Client__c/fields/Turn_Over__c.field-meta.xml
<CustomField>
    <fullName>Turn_Over__c</fullName>
    <description>Annual revenue or turnover of the company (may be a currency field).</description>
    <label>Turn Over</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>