force-app/main/default/objects/Client__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>The official website URL of the client. Used for verification or research.</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>