force-app/main/default/objects/Client__c/validationRules/VR1_No_Of_Employees_And_TurnOver.validationRule-meta.xml
<ValidationRule>
    <fullName>VR1_No_Of_Employees_And_TurnOver</fullName>
    <active>true</active>
    <description>Will Validate Number Of Employees And Turn Over Is Less Than 0 Or Not</description>
    <errorConditionFormula>OR(NumberEmployee__c&lt; 0,  Turn_Over__c &lt;0)</errorConditionFormula>
    <errorMessage>Values Can&apos;t be  Less Than 0</errorMessage>
</ValidationRule>