force-app/main/default/objects/Client__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>isActive__c</columns>
    <columns>Email__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>Contact_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>