force-app/main/default/objects/Client__c/listViews/Client_List_View.listView-meta.xml
<ListView>
    <fullName>Client_List_View</fullName>
    <columns>NAME</columns>
    <columns>isActive__c</columns>
    <columns>Email__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>Contact_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>Client List View</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>